# pa6e

./: .gitignore  CLAUDE.md  README.md  flake.nix  html-to-pdf-darwin.bash  html-to-pdf.bash  html-to-pdf.mjs  justfile  label.md  markdown-to-html.bash  pa6e-print.bash  peri-a6.css  print.bash  print_label.bash  treefmt.nix  version.env
.github/workflows/: nix.yml
doc/: pa6e-print.1.scd  pa6e.1.scd
docs/plans/: 2026-03-23-unified-print-pipeline.md
rs/: Cargo.toml  build.rs
rs/src/: image_prep.rs  main.rs  pipeline.rs  printer.rs
rs/src/bluetooth/: linux.rs  macos.rs  mod.rs
